@@ -143,8 +143,6 @@ $wgAutoloadLocalClasses = array(
 	'LogEventsList' => 'includes/LogEventsList.php',
 	'LogPage' => 'includes/LogPage.php',
 	'LogPager' => 'includes/LogEventsList.php',
-	'LogReader' => 'includes/LogEventsList.php',
-	'LogViewer' => 'includes/LogEventsList.php',
 	'MacBinary' => 'includes/MacBinary.php',
 	'MagicWord' => 'includes/MagicWord.php',
 	'MagicWordArray' => 'includes/MagicWord.php',
